--- a/css/responsive.css
+++ b/css/responsive.css
@@ -3,6 +3,25 @@
         flex-direction: column;
         gap: 1em;
     }
+    .about-child {
+    margin-top: 30px;
+}
+.work-child {
+    margin-top: 30px;
+}
+.team-child {
+    margin-top: 30px;
+}
+.counter-child {
+    margin-top: 30px;
+}
+.skills-child {
+    width: 100%;
+    padding-top: 30px;
+}
+.priching-child {
+    margin-top: 30px;
+}
  
     .counter-box {
         flex-direction: column;
@@ -105,4 +124,5 @@
         padding: 12px;
         font-size: 16px;
     }
+}
 }
